testdata/failing/union-ellipsis-after-ignore.trunnel
struct ellipsis_after_ignore {
    u8 tag;
    union addr[tag] {
       4 : ignore; ...;
    };
}
